--- a/src/apps/speaker/speaker-page.layout.html
+++ b/src/apps/speaker/speaker-page.layout.html
@@ -1,11 +1,7 @@
 <main-page>
     <template slot="content">
-
         <card-c :data="planningCard">
-            <template slot="card-body">
-                <null-c ref="planning"></null-c>
-            </template>
+            <template slot="card-body"><calendar-w /></template>
         </card-c>
     </template>
-
 </main-page>
