play with transition todo : __API__ as var

--- a/src/apps/speaker/speaker-page.layout.html
+++ b/src/apps/speaker/speaker-page.layout.html
@@ -1,7 +1,18 @@
-<main-page>
-    <template slot="content">
+
+<div class="content-wrapper d-flex align-items-center auth auth-bg-1 theme-one" >
+    <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row" style="padding: 2%">
+        <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
+            <a class="logo" href="javascript:">
+                <img class="img-fluid ml-2" src="./img/logo_isv.png" alt="logo">
+            </a>
+        </div>
+        <header-c/>
+    </nav>
+    <div class="d-flex flex-column bd-highlight mt-5">
         <card-c :data="planningCard">
             <template slot="card-body"><calendar-w /></template>
         </card-c>
-    </template>
-</main-page>
+    </div>
+</div>
+
+
